Update headers after adding new column

--- a/simona_table/templates/table_blocks.html
+++ b/simona_table/templates/table_blocks.html
@@ -6,6 +6,6 @@
     <perch:content id="mytable" type="simona_table" label="Data" class="table table-bordered" />
   </perch:block>
   <perch:block type="image" label="Feature image">
-    <perhc:content id="image" type="image" label="Image" />
+    <perch:content id="image" type="image" label="Image" output="tag" />
   </perch:block>
 </perch:blocks>
